@@ -471,7 +471,7 @@ void TabList::logic() {
 
 	// Also defocus if we start using the mouse
 	// we need to disable this for touchscreen devices so that item tooltips will work
-	if (!settings->touchscreen && current != -1 && inpt->usingMouse()) {
+	if (!inpt->usingTouchscreen() && current != -1 && inpt->usingMouse()) {
 		defocus();
 	}
 }
